// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`format/comments/comment-placement.mo > prints as snapshotted 1`] = `
"{
  //
}//

//a
//b

//a


//b

{
  //
};

//

a<
  (
    b,
    //c
  )>();

a<(b)>();

/**/
/***/
/****/
/*****/
/******/
/*******/
/********/
/*********/
/**********/
/***********/

/*=*/
/**=*/
/**=**/
/** **/
/*** **/
/** ***/

/****
-----
******/

{
  /****
  -----
  ******/
};

/**/ /**/

/**/

/**/

let/*{{*/x = 0; //x
(x);

let /*{{*/ x = 1;

do {
  // prettier-ignore
  123
};

do {
  // c
  123
};

// a'b
1;

// a"b
1;

//'
1;

//"
1;

/*'*/
1;

/*;"*/
1;

/* a'b */
1;

/* a"b */
1;
"
`;

exports[`format/comments/prettier-ignore.mo > prints as snapshotted 1`] = `
"//prettier-ignore
1*1;
2 * 2;

//prettier-ignore
1*1;

2 * 2;

// prettier-ignore
let rec1 = {
abc};

let rec2 = { abc };

/* prettier-ignore */
let b1 = 2*2+2;

let b2 = 2 * 2 + 2;

let a = 1 * 1 + 1;

// prettier-ignore
let b = 2*2+2;

let c = 3 * 3 + 3;
"
`;

exports[`format/comments/separator-seams.mo > prints as snapshotted 1`] = `
"let parExp = f(
  a // c
  ,
  b
);

let arrayExp = [
  a // c
  ,
  b
];

let trailingComma = f(
  a
  // c
  ,
);

let fileSeam = 1 // c
;

let angleSeam = L.make<
  A // c
  ,
  B>();

let attachedComment = f(
  a,
  b // trailing
);
let ownLineComment = f(
  a,
  // own line
  b
);

let blockCommentUnaffected = f(
  a /* c */,
  b
);
"
`;

exports[`format/control-flow/switch-case.mo > prints as snapshotted 1`] = `
"switch (someLongScrutineeExpressionHere) {
  case (#alphaVariant) alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambda;
  case (#betaVariant) alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambda;
  case (_) alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambda
};

switch (mode) { case #up { +1 }; case #dn { -1 } };

switch x { case (#a) 1 };

switch (someLongScrutineeExpressionHere) {
  case (#a)
    alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambdaMuNuXiOmicronPiRhoSigma;
  case (_) 2
};

switch (x) { case (#a) 1; case (_) 2; };

switch (x) { case (#a) 1; case (_) 2 };

switch (x) {
  case (#alphaVariant) {
    alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambdaMuNuXi1
  };
  case (#betaVariant) {
    alphaBetaGammaDeltaEpsilonZetaEtaThetaIotaKappaLambdaMuNuXi2
  }
};

switch (a) {
  case (#VCon (tag, args)) switch tag {
    case "0" b;
    case _ { assert false; #VInt 0 }
  };
  case _ { assert false; #VInt 0 }
};
"
`;

exports[`format/expressions/angle-lists.mo > prints as snapshotted 1`] = `
"let fitsFlat = L.make<Nat, Int>();

let breaksWithCloseGlued = someLongReceiverNameHere.methodName<
  SomeLongTypeArgumentName,
  AnotherLongTypeArgumentName>(anArgument);

type LongTypeParameters<
  SomeLongTypeParameterName,
  AnotherLongTypeParameterName,
  AThirdLongOne> = SomeLongTypeParameterName;

let trailingComment = L.make<
  Nat,
  Int // c
>();

let middleComment = L.make<
  Nat, // c
  Int>();

let blockCommentStaysGlued = L.make<
  Nat,
  Int /* c */>();

type TrailingCommentInParameters<
  A,
  B // c
> = A;

type ShortParameters<A, B> = A;
"
`;

exports[`format/expressions/angle-seams.mo > prints as snapshotted 1`] = `
"func id<T>(x : T) : T { x };
let spacedBeforeAngle = id <Nat>(1);
let inAChain = 1 + id <Nat>(2);
let compare = 1 < 2;
let compareBroken = 1 < 2;
"
`;

exports[`format/expressions/binary-chains.mo > prints as snapshotted 1`] = `
"let arithmetic = alphaBetaGamma +
  deltaEpsilonZeta +
  etaThetaIota +
  kappaLambdaMu;

let mixedPrecedence = alphaBetaGamma +
  deltaEpsilonZeta *
  etaThetaIota -
  kappaLambdaMu;

let booleanChain = alphaBetaGamma and
  deltaEpsilonZeta or
  etaThetaIota and
  kappaLambdaMu;

let comparisonChain = alphaBetaGamma ==
  deltaEpsilonZeta or
  etaThetaIota <
  kappaLambdaMu;

let short = a + b + c;

let single = proposal_submission_deposit_e8s +
  system_params_reserve_e8s_plus_more;

let pipeline = [1, 2, 3]
  |> Array.map(func(x : Nat) : Nat { x + 1 })
  |> Array.filter(func x { x > 1 })
  |> Array.size;

let withComment = alphaBetaGamma + // keep me
    deltaEpsilonZeta;

let concatStaysLong = alphaBetaGammaDelta # deltaEpsilonZetaEta # thetaIotaKappaLambda;

let shiftStaysLong = aaaaaaaabbbbbbbb >> ccccccccdddddddd;

let glued = 1 + 1;

let gluedLeft = 1 + 1;

let gluedRight = 1 + 1;

let gluedRel = a == b;

let gluedChain = aaaaaaaabbbbbbbb +
  ccccccccdddddddd +
  eeeeeeeeffffffff +
  gggggggghhhhhhhh;
"
`;

exports[`format/expressions/coalesce-chains.mo > prints as snapshotted 1`] = `
"let short = a ?? b ?? c;

let longChain = aaaaaaaaaaaaaaa
  ?? bbbbbbbbbbbbbbb
  ?? ccccccccccccccc
  ?? ddddddddddddddd
  ?? eeeeeeeeeeeeeeeee;

let singleOperator = proposal_submission_deposit_e8s
  ?? system_params_reserve_e8s_plus_more;

let glued = a ?? b;

let gluedChain = aaaaaaaabbbbbbbbbb
  ?? ccccccccccdddddddddd
  ?? eeeeeeeeeeffffffffff;

let callOperands = someVeryLongFunctionName(argumentOne, argumentTwo)
  ?? someOtherLongFunction(argumentThree, argumentFour);

let nested = aaaaaaaaaaaaaaaaaaaaa
  ?? (bbbbbbbbbbbbbbbbbbbbb ?? ccccccccccccccccccccc ?? ddddddddddddddddddddd);

let withComment = aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa ?? // keep me
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb;

let mixedWithBinary = aaaaaaaaaaaaaaaaaaaaaaaa
  ?? bbbbbbbbbbbbbbbbbbbbbb + cccccccccccccccccccccccc;

let withHash = aaaaaaaaaaaaaaaaaaaa # bbbbbbbbbbbbbbbbbbbb
  ?? cccccccccccccccccccc # dddddddddddddddddddd;
"
`;

exports[`format/expressions/construct-coverage.mo > prints as snapshotted 1`] = `
"import Prim "mo:⛔";
import  Other  "mo:⛔";

let x = 1;
let y = 2;
let z = x + y;

func foo<A<:Any>(x:A) {};
func foo <A <: Any>(x:A) {};

func ():() {};
func <T> () {};

?{};
do ? {};
do?{};
do? {};

async* T;
func f5() : async* T {};
type T5 = async* Nat;
shared func f5s() : async* T {};

await* t;
func f5b() : async* T { await* t };

f6<() -> (), Nat>();
f6<() -> (), () -> ()>();

switch y { case (x) [x] };
switch y { case (x) [x, x] };
func f7() { switch y { case (x) [x] } };

(
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
);

?#abc;
? #abc;
let v9 = ?#abc;

#a;
"A" # b;
"A" # #b;
"A"# b;
"A"#"B";
"A"# #b;
"A" #
"B";

{ a and b with c = d };
{ a and b with c = d };
{ a and b with c = d };
{ a and b with c = d; e = f; };

if(x) { y };
if(x) { y };
"
`;

exports[`format/expressions/literals-and-tokens.mo > prints as snapshotted 1`] = `
"let s1 = 1e2;
let s2 = -1e-2;
let s3 = 1.7976931348623157e+308;

let e1 = 1e1;
let e2 = 1e-1;
let e3 = 1.e1;

let h1 = 0xf;
let h2 = 0xF;
let h3 = 0xf_f;
let h4 = 0xF_f;
let h5 = 0xF_F;

x.0.e0x;

x.0.e0 x;

"A
B";

"  A
  B";

"A

B";

"A

  B";

"
A

  B
    ";

"

{
};

";

'a';

"a";

A and B;

A or B;

not A;

A |> f;

a ?? b;

a ?? b ?? c;

shared query func f() : async () {};
"
`;

exports[`format/expressions/member-chains.mo > prints as snapshotted 1`] = `
"let workedExample = x
  .repeat(50)
  .repeat(50)
  .repeat(50)
  .repeat(50)
  .repeat(50)
  .repeat(50)
  .repeat(50);

let twoDotsNoCalls = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  .xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  .xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx;

let defectCase = x
  .field
  .someVeryLongFunctionNameThatIsQuiteLongIndeed(aLongArgumentHere)
  .bar(1);

let twoCalls = someLongReceiverNameHere
  .alphaBetaGammaDelta(someLongArgumentName)
  .epsilonZetaEtaTheta(1);

let fieldOnly = someVeryLongReceiverNameHere
  .alphaBetaGammaDelta
  .epsilonZetaEtaTheta
  .iotaKappaLambdaMu;

let shortChain = x.foo(a).bar(b);

let breakAtArguments = xs.map(func (x : Nat) : Nat { return x + 1; });

let spacedSource = someLongReceiverNameHere
  .alphaBetaGammaDelta(a)
  .epsilonZetaEtaTheta(b);

let receiverIsACall = f(
  a
).alphaBetaGammaDelta().epsilonZetaEtaTheta().iotaKappaLambdaMuNuXiOmicronPiRho();

let projected = someVeryLongReceiverNameHere
  .alphaBetaGammaDelta(aLongArgument)
  .epsilonZetaEtaTheta.1;

let nestedInArgument = outerFunction(
  innerObject.someLongMethodName(anotherArgument).andAnotherMethod(1)
).call();

let indexedHead = someLongArrayNameHere[0]
  .alphaBetaGammaDelta(a)
  .epsilonZetaEtaTheta(b)
  .iotaKappaL(1);
"
`;

exports[`format/expressions/operator-spacing.mo > prints as snapshotted 1`] = `
"1 + 5;
1 + 1;
1 + 1.0;
x + 1;
x + 1.0;
1 * 1;
x * 1;
1 / 1;
x / 1;
1 - 1;
1.0 - 1.0;
x - 1;
x - 1.0;

1 + 1;
x + 1;
1 - 1;
x - 1;

1. / +5;

-+5;
+-a;
+ - ^5;
^ ^a;
^ ^ a;

x + -1;
x - +1;

x(+1);
x(-1);
return +1;
return -1;

x;
+1;
"
`;

exports[`format/expressions/parens-heads-and-seams.mo > prints as snapshotted 1`] = `
"if a b;

if (a) b;

if a (b);

if (a) (b);

().0;

x.0.y;

(

).0;

(a).0;

0. y;

0.
y;

_(i);

_[i];

_ (i);

_ [i];

switch x { case _ (i) 1 };

switch x { case _ [i] 1 };

(with a = 1) actor {};

(with a = 1; b = 2) actor {};

(m with a = 1) actor {};

(m with a = 1; b = 2) actor {};

(m with a = 1)
actor {};

(with a = 1)
actor {};

(
  m with
  a = 1;
  b = 2;
)
actor {};

{ base with a = 1 };
"
`;

exports[`format/imports/comment-in-section.mo > prints as snapshotted 1`] = `
"// header
import A "A";
// import B "B";
import C "C";

actor {};

// note
object Tail { public let x = 1; };
"
`;

exports[`format/imports/extra-blanks.mo > prints as snapshotted 1`] = `
"import A "A";

import { B; C } "BC";

actor {};
"
`;

exports[`format/imports/glued-section.mo > prints as snapshotted 1`] = `
"import A "A";
import B "B";

actor {};
"
`;

exports[`format/imports/no-imports.mo > prints as snapshotted 1`] = `
"let x = 1;

let y = 2;
"
`;

exports[`format/layout/blank-lines-and-groups.mo > prints as snapshotted 1`] = `
"{};

{};

{

};

{

};

{ a; b };

{ a; b };

a;

b;

{};
{ a };
();
(a);

{};
{ a };
();
(a);

(
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
  xxxxxxxxxxxxxxxxxxxx,
);

(
  (
    xxxxxxxxxxxxxxxxxxxx,
    xxxxxxxxxxxxxxxxxxxx,
    xxxxxxxxxxxxxxxxxxxx,
    xxxxxxxxxxxxxxxxxxxx,
    xxxxxxxxxxxxxxxxxxxx
  )
);

(func() { a });

(func() { a });

if true () else ();

if true {} else {};

if true (a) else (b);

if true { a } else if false { b } else { c };

[1, 2,];

{ abc; };

{
  a;

  // c
  b;
};
"
`;

exports[`format/layout/trailing-separators.mo > prints as snapshotted 1`] = `
"let b1 = { a; };
let b2 = { a };
let b3 = { a; };
let b4 = { a };

let b5 = { a; b };
let b6 = { a; b; };

module M1 { let a = 1; };
module M2 { let a = 1 };

type T1 = { #ok : A; };
type T2 = { #ok : A };
type T3 = { x : Nat; };
type T4 = { x : Nat };
type T5 = { #a : Nat; #b : Text };

let a1 = [1,];
let a2 = [1];
let t1 = (1, 2,);
let t2 = (1, 2);
let c1 = f(1,);
let c2 = f(1);

let k1 = [{ abc; }];
let k2 = [{ abc; },];

let v = [{ a = 1; },];
let w = [{ a = 1; }];

{}
A;
{}
.A;
if () {}
else {};

{}

{};
{}

{}

{
  // }
}
A;
{
  //
}
A;
{}
//
A;

/*

{
// }
};
A

*/

{}
/**/
A;
{
  /**/
}
A;
if () {}
 /*c*/ else {};
try {}
 /*c*/ finally {};
{}
 /*c*/ .A;

if a {}
// Comment
else {};
if a
{}
// Comment
else {};
if a {}
// Comment
else {};
if a {}

// Comment
else {};
if a {}
// Comment
  else
{};
try {}
// Comment
catch e {};
try {}
// Comment
finally {};

(a, b, c);
(a, b, c,);
(a, b, c,);
(a, b, c);

[a, b];
[a,];
x : [
T
];
let z1 : [ { abc : Nat } ] = 1;
let k = [{ abc; },];

"

{
// }
}
A

";
"\\"" # "

{
// }
}
A

";
"{
}";
"
{
}";
"{
}
";
"
{
}
";
"

{
}
";
"
{
}

";

x;
/**/
x;
/*
*/

switch x { case 1 { a }; case 2 { b } };
switch x { case 1 { a }; case 2 { b }; };
switch x { case 1 a; case 2 b };
func f9() : Nat { let x = 1; (x, 2).0 };
"
`;

exports[`format/layout/whitespace-and-brackets.mo > prints as snapshotted 1`] = `
"a;

b;

c;

d;

// two blanks follow this comment

e;

let r1 = { abc };
let r2 = { abc };
let r3 = { abc };

let a1 = [1];
let a2 = [1];

let arr = [1];
let indexed = arr[  1  ];

let p = (1);

f(1, 2);

f;
"
`;

exports[`format/obj-actors/object-expressions.mo > prints as snapshotted 1`] = `
"let anon = object { public let x = 1; public func f() : Nat { 1 } };
let anonEmpty = object {};
let actorExp = actor {
  public func f() : Nat { 1 };
  public func g() : Nat { 2 };
};
let annotated = actor : actor { f : () -> async Nat } {
  public func f() : async Nat { 1 };
};
module Inner { public let g = 1 };
object Named { public func h() : Nat { 1 } };
class Klass(x : Nat) { public let v = x; public func get() : Nat { v } };
shared actor class Boxed<T>(init : T) {
  public var value = init;
  public func set(v : T) : () { value := v };
};
let mix = mixin (y : Nat) { public let m = y };
actor Palindrome {};
"
`;

exports[`format/obj-actors/object-patterns-and-fields.mo > prints as snapshotted 1`] = `
"object Fields {
  public let a = 1;
  private let hidden = 0;
  public var b = 2;
  public let renamed = { newX = a; var y = b };
  public func method() : Nat { a };
};
func take({ x; y = renamed } : { x : Nat; y : Nat }) : Nat { x };
func annotated({ a : Nat } : { a : Nat }) : Nat { a };

let outer = { { p = 1 } with q = 2 };
"
`;

exports[`format/obj-actors/object-types.mo > prints as snapshotted 1`] = `
"type Simple = { x : Nat; y : Text };
type Method = { f : () -> async Nat };
type Mutable = { var x : Nat };
type TypeField = { type U = Nat; x : U };
type Nested = { inner : { deep : { x : Nat } } };
type WithParams = { f<A>(a : A) : A };
type Result = { #ok : Nat; #error : Text };
type Status = { #Active; #Inactive; #Banned : Text };
type Arrow = { x : Nat } -> Nat;
type Wide = {
  model : Text;
  plate : Text;
  isValid : Bool;
  wasStolen : Bool;
  expires : Nat
};
"
`;

exports[`format/obj-actors/record-literals.mo > prints as snapshotted 1`] = `
"let collapsed = { a = 1; b = 2; };
let shorthand = { a; b };
let renamed = { newX = x; y };
let mutable = { x = 1; var y = 2 };
let nested = { outer = { inner = { deep = 1 } } };
let wide = {
  alpha = 1;
  beta = 2;
  gamma = 3;
  delta = 4;
  epsilon = 5;
  zeta = 6;
  eta = 7
};
let trailing = { a = 1; };
"
`;

exports[`format/obj-actors/record-update.mo > prints as snapshotted 1`] = `
"module M { public let u = 25; };
let a = { x = 1 };
let base = { b = 6 };
let andOnly = { a and M };
let withOnly = { base with x = 2 };
let andWith = { a and M with u = 1 };
let nestedBase = { { c = "C"; d = "D" } with a = 8; b = 6 };
let wide = {
  veryLongBaseNameHere
  with
  alpha = 1;
  beta = 2;
  gamma = 3;
  delta = 4;
  epsilon = 5
};
"
`;
